--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 	    <meta charset="UTF-8">
-	    <meta name="description" content="City of Pawnee Parks Department Home Page">
-	    <meta name="author" content="your-net-id">
+	    <meta name="description" content="Dawgs Pizza Home Page">
+	    <meta name="author" content="iphong">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	    <link rel="shortcut icon" href="img/logo.png">
-	    <title>Pawnee Parks Department</title>
+	    <title>Dawgs Pizza</title>
 	    
 	    <!-- hot link to Bootstrap stylesheet -->
 	    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -24,15 +24,15 @@
 			            <span class="icon-bar"></span>
 			            <span class="icon-bar"></span>                        
 			        </button>
-			        <a class="navbar-brand" href="index.html">Pawnee Parks <img src="img/logo.png" alt="Parks logo"></a>
+			        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="pizza logo" class="crop"></a>
+
 			    </div>
 
 			    <div class="collapse navbar-collapse pawnee-navbar-menu">
 			        <ul class="nav navbar-nav">
-			            <li class="active"><a href="#">Home</a></li>
-			            <li><a href="#">Parks</a></li>
-			            <li><a href="#">Community Center</a></li>
-			            <li><a href="#">Harvest Festival</a></li>
+			            <li class="active"><a href="index.html">HOME</a></li>
+			            <li><a href="menu.html">MENU</a></li>
+			            <li><a href="about.html">ABOUT US</a></li>
 			        </ul>
 			    </div>
 			</nav>
@@ -43,36 +43,28 @@
 			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 			  </ol>
 					     <!-- slides --> 
 		    <div class="carousel-inner">
 		        <!-- slide -->
 		        <div class="item active">
-		            <img src="img/summer-park.jpg" alt="Summer in the Park">
+		            <img src="img/pizza1.jpg" alt="Our fresh Pizza">
 		            <div class="carousel-caption">
-		                <p>Summer in our Parks</p>
+		                <p>Fresh Pizza</p>
 		            </div>
 		        </div>
 				
 				 <div class="item">
-		            <img src="img/autumn-park.jpg" alt="Autumn in our Parks">
+		            <img src="img/pizza-order.jpg" alt="Fast Order and Delivery">
 		            <div class="carousel-caption">
-		                <p>Autumn in our Parks</p>
+		                <p>Fast Order and Delivery</p>
 		            </div>
 		        </div>
 
 		        <div class="item">
-		            <img src="img/winter-park.jpg" alt="Winter in our Parks">
+		            <img src="img/pizza-oven.jpg" alt="Since 1989">
 		            <div class="carousel-caption">
-		                <p>Winter in our Parks</p>
-		            </div>
-		        </div>
-
-		         <div class="item">
-		            <img src="img/spring-park.jpg" alt="Spring in our Parks">
-		            <div class="carousel-caption">
-		                <p>Spring in our Parks</p>
+		                <p>Since 1989</p>
 		            </div>
 		        </div>
 			 </div>
@@ -87,23 +79,42 @@
 
 
 			<div class="row">
-			    <div class="col-md-4">
-			        <h2><a href="#">Parks</a></h2>
-			        <img src="img/parks.png" alt="dog in park" class="col-pic">
-			        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, amet, iure, numquam, consequuntur deleniti nam illum molestiae eos quis saepe perferendis dignissimos commodi architecto dolores quod suscipit qui animi voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, officia possimus minus. Libero assumenda in voluptate excepturi repellendus quia maxime officia deserunt eum voluptatum! Quia dicta necessitatibus quisquam officia temporibus.</p>
+			    <div class="col-md-6">
+			        <h2>Fresh DawgPizza</h2>
+			        Awesome wood-fired pizza with fresh ingredients baked to order. Come in and eat, or call us for delivery!</p>
+			        <br>
+					<iframe  width= "375"; height="300";
+					src="http://www.youtube.com/embed/HWL__9yDu8I">
+					</iframe>
+
 			    </div>
-			    <div class="col-md-4">
-			        <h2><a href="#">Community</a></h2>
-			        <img src="img/community.jpg" alt="community in park" class="col-pic">
-			        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, amet, iure, numquam, consequuntur deleniti nam illum molestiae eos quis saepe perferendis dignissimos commodi architecto dolores quod suscipit qui animi voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, officia possimus minus. Libero assumenda in voluptate excepturi repellendus quia maxime officia deserunt eum voluptatum! Quia dicta necessitatibus quisquam officia temporibus.</p>
-			    </div>
-			    <div class="col-md-4">
-			        <h2><a href="#">Harvest Center</a></h2>
-			        <img src="img/harvest.jpg" alt="harvest in park" class="col-pic">
-			        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, amet, iure, numquam, consequuntur deleniti nam illum molestiae eos quis saepe perferendis dignissimos commodi architecto dolores quod suscipit qui animi voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, officia possimus minus. Libero assumenda in voluptate excepturi repellendus quia maxime officia deserunt eum voluptatum! Quia dicta necessitatibus quisquam officia temporibus.</p>
-			    </div>
-			</div> <!-- .row -->
+			    <div class="col-md-6">
+			        <h2>Business Hours</h2>
+			        <br> <br> 
+ 			        <p><strong>Our business hours:</strong> 10:00am to 11:00pm, Monday through Saturday.</p>
+					<p><strong>Phone number :</strong> 206-555-1212</p>
+					<br>
+					<p><strong>Address :</strong> <a href="https://maps.google.com/maps?q=4306+University+Way+NE,+Seattle,+WA+98105&amp;client=ubuntu&amp;channel=cs&amp;hnear=4306+University+Way+NE,+Seattle,+Washington+98105&amp;t=m&amp;z=16">4306 University Way NE, Seattle, WA 98105</a></p>
+				    </div>
+				</div> <!-- .row -->
 		</div>
+
+		<div class ="footer"> 
+			<br>
+			Call us for delivery: 206-555-1212
+			<a href="mailto:dawgpizzaseattle@gmail.com" target="_top"> &nbsp;  email us</a> 
+			to place order today.
+
+			<br>
+			&copy;	2013 Dawg Pizza&nbsp;
+			<a href="https://twitter.com/share" class="twitter-share-button" data-via="DawgPizzaSea" data-size="large">&nbsp;Tweet</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],
+			p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+			<a href="https://github.com/OatLiew/Infor343/tree/master/Hw1" target="_blank">GitHUB</a> 
+
+		</div>
+
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
