--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
 
 			    <div class="collapse navbar-collapse pawnee-navbar-menu">
 			        <ul class="nav navbar-nav">
-			            <li class="active"><a href="index.html">HOME</a></li>
+			            <li class=""><a href="index.html">HOME</a></li>
 			            <li><a href="menu.html">MENU</a></li>
 			            <li><a href="about.html">ABOUT US</a></li>
 			        </ul>
@@ -47,7 +47,7 @@
 			<div class="menu-ui">
                	<span class="menu-label">Our Menu</span>
             	<div class="btn-group">
-	                <button type="button" class="btn btn-default active" data-clickby="meat">Meat Pies</button>
+	                <button type="button" class="btn btn-default" data-clickby="meat">Meat Pies</button>
                  	<button type="button" class="btn btn-default" data-clickby="vegetarian">Vegetarian Pies</button> 
                  	<button type="button" class="btn btn-default" data-clickby="drinks">Drinks</button>
 	                <button type="button" class="btn btn-default" data-clickby="desserts">Desserts</button>
