--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			    <div class="collapse navbar-collapse pawnee-navbar-menu">
 			        <ul class="nav navbar-nav">
-			            <li class="active"><a href="index.html">HOME</a></li>
+			            <li class=""><a href="index.html">HOME</a></li>
 			            <li><a href="menu.html">MENU</a></li>
 			            <li><a href="about.html">ABOUT US</a></li>
 			        </ul>
