--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
 		</div>
 
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+         <!-- <script src="js/jquery.js"></script> -->
          <!-- auto-play the carousel -->
 	    <script>
 	        $('.carousel').carousel();
